--- a/source/sass/blocks/info-banner.scss
+++ b/source/sass/blocks/info-banner.scss
@@ -256,3 +256,12 @@
     }
   }
 }
+
+
+.info-banner--black {
+  .info-banner__title {
+    color: $dark-text;
+  }
+
+  border-color: $light-grey;
+}
