--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -22,6 +22,7 @@ $light-blue: #eaf4fa;
 $light-blue-accent: #9bd2f4;
 $light-grey: #e3e8ee;
 $select-grey: #f5f6f7;
+$dark-light: #eff1f4;
 $grey: #707b8c;
 $grey-default: #a6abb3;
 $grey-lighter: #a6abb2;
