--- a/source/components/internet-banner.html
+++ b/source/components/internet-banner.html
@@ -1,9 +1,14 @@
 <div class="internet-banner">
   <div class="container">
-    <div class="internet-banner__container">
-      <p class="internet-banner__title">Деревни, сёла и посёлки подключат к мобильному интернету</p>
-      <p class="internet-banner__text">Какие первыми ― решать вам</p>
-      <a class="internet-banner__button button button--blue" href="#">Проголосовать</a>
+    <div class="internet-banner__wrapper">
+      <div class="internet-banner__container">
+        <p class="internet-banner__title">Деревни, сёла и посёлки подключат к мобильному интернету</p>
+        <p class="internet-banner__text">Какие первыми ― решать вам</p>
+        <a class="internet-banner__button button button--blue" href="#">Проголосовать</a>
+      </div>
+      <div class="internet-banner__image-wrapper">
+        <img width="645" height="328" src="img/internet-banner.svg" alt="Картинка">
+      </div>
     </div>
   </div>
 </div>
