--- a/source/sass/blocks/voting-page.scss
+++ b/source/sass/blocks/voting-page.scss
@@ -37,6 +37,38 @@
     padding-right: 0;
   }
 
+  .choices[data-type*="select-one"] .choices__input {
+    position: static;
+    padding: 13px 17px 15px 16px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 135%;
+    -webkit-appearance: textfield;
+    outline-offset: -2px;
+  }
+
+  .choices__placeholder {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 135%;
+  }
+
+  .choices__list--dropdown .choices__item--selectable,
+  .choices__list--dropdown .choices__item--selectable.is-highlighted {
+    color: var(--color-text, $grey);
+  }
+
+  .choices__heading {
+    font-size: 18px;
+    line-height: 23px;
+    color: var(--color-text, $dark-text);
+    pointer-events: none;
+    font-weight: 400;
+    border-bottom: none;
+    padding: 13px 17px 15px 16px;
+  }
+
+
   @include tablet {
     padding-bottom: 71px;
 
