--- a/source/sass/blocks/gallery-full.scss
+++ b/source/sass/blocks/gallery-full.scss
@@ -10,7 +10,8 @@
 }
 
 .gallery-full__item,
-.proposal__project .swiper-slide .gallery-full__item {
+.proposal__project .swiper-slide .gallery-full__item,
+.proposal__project .swiper-slide.gallery-full__item {
   width: 100%;
   height: 300px;
   margin: 0;
