добавляет оранжевый цвет статусу

--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -366,6 +366,12 @@
       }
     }
   }
+
+  &--orange {
+    p span {
+      color: var(--color-text, $orange);
+    }
+  }
 }
 
 .proposal__files {
