--- a/source/sass/blocks/hearings-result.scss
+++ b/source/sass/blocks/hearings-result.scss
@@ -1,7 +1,7 @@
 .hearings-result {
-    margin-bottom: 35px;
+    margin-bottom: 48px;
     padding-bottom: 48px;
-    border-bottom: 1px solid #E3E8EE;
+    border-bottom: 1px solid var(--color-stroke, $light-grey);
 
     @include tablet {
         padding-bottom: 42px;
@@ -10,7 +10,7 @@
 
     @include mobile {
         padding-bottom: 30px;
-        margin-bottom: 35px;
+        margin-bottom: 32px;
     }
 
     .poll-result__section {
