--- a/source/sass/blocks/text-input.scss
+++ b/source/sass/blocks/text-input.scss
@@ -21,4 +21,8 @@
     line-height: 140%;
     color: var(--color-text, $grey-default);
   }
+
+  &:-webkit-autofill {
+    -webkit-box-shadow: inset 0 0 0 1000px var(--color-bg-secondary, $color-bg) !important; /* Цвет фона */
+  }
 }
