--- a/source/sass/blocks/hearings.scss
+++ b/source/sass/blocks/hearings.scss
@@ -8,7 +8,7 @@
 
   @include mobile {
     padding-top: 30px;
-    padding-bottom: 64px;
+    padding-bottom: 60px;
   }
 }
 
@@ -67,7 +67,8 @@
       border-bottom: 1px solid var(--color-stroke, $light-grey);
 
       @include mobile {
-        padding-bottom: 20px;
+        padding-bottom: 19px;
+        margin-bottom: 33px;
       }
     }
 
@@ -156,6 +157,7 @@
 
   p {
     margin-top: 0;
+    margin-bottom: 24px;
   }
 
   @include tablet {
@@ -267,8 +269,8 @@
 
 .hearings__proposal {
   grid-area: f;
-  padding: 40px 32px;
-  background: ar(--color-bg-secondary, $color-bg);
+  padding: 36px 32px;
+  background: var(--color-bg-secondary, $color-bg);
   border-radius: 5px;
 
   margin-bottom: 32px;
