добавляет верстку заявления

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -238,3 +238,4 @@
 // public-hearings
 @import "blocks/application-status";
 @import "blocks/application-popup";
+@import "blocks/application-result";
