--- a/source/sass/blocks/link-list.scss
+++ b/source/sass/blocks/link-list.scss
@@ -4,6 +4,11 @@
   border-radius: 5px;
   padding: 32px;
   margin-bottom: 24px;
+  width: 740px;
+
+  @include tablet {
+    width: 100%;
+  }
 
   &__title {
     font-weight: normal;
