--- a/source/sass/blocks/hearings.scss
+++ b/source/sass/blocks/hearings.scss
@@ -72,6 +72,10 @@
       }
     }
 
+    .hearings__bottom {
+      border-top: none;
+    }
+
     .hearings__status {
       @include mobile {
         margin-bottom: 24px;
@@ -306,11 +310,26 @@
 }
 
 .hearings__application-status {
+  position: relative;
   margin-bottom: 48px;
   grid-area: g;
 
   @include mobile {
     margin-bottom: 32px;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -48px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: var(--color-stroke, $light-grey);
+
+    @include mobile {
+      bottom: -33px;
+    }
   }
 }
 
