--- a/source/sass/blocks/hearings.scss
+++ b/source/sass/blocks/hearings.scss
@@ -63,17 +63,41 @@
 
   &--public {
     .hearings__files {
+      margin-bottom: 0;
       padding-bottom: 36px;
-      border-bottom: 1px solid var(--color-stroke, $light-grey);
+      border-bottom: none;
 
       @include mobile {
         padding-bottom: 19px;
-        margin-bottom: 33px;
+        margin-bottom: 0;
       }
     }
 
     .hearings__bottom {
       border-top: none;
+    }
+
+    .hearings__proposal {
+      position: relative;
+      margin-top: 45px;
+
+      @include mobile {
+        margin-top: 33px;
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: -45px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: var(--color-stroke, $light-grey);
+
+        @include mobile {
+          top: -33px;
+        }
+      }
     }
 
     .hearings__status {
