Обновление Реализованные объекты/благоустройство

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -239,3 +239,9 @@
 @import "blocks/application-status";
 @import "blocks/application-popup";
 @import "blocks/application-result";
+
+//alternate-list
+@import "blocks/alternate-list";
+
+//gallery-with-thumbs
+@import "blocks/gallery-with-thumbs";
