--- a/source/sass/blocks/gallery-with-thumbs.scss
+++ b/source/sass/blocks/gallery-with-thumbs.scss
@@ -3,6 +3,16 @@
   border-radius: 5px;
   background-color: $color-bg;
 
+  @include tablet {
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+
+  @include mobile {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
   .project-page__gallery {
     margin-bottom: 0;
   }
@@ -77,6 +87,12 @@
     svg {
       color: var(--color-text, $blue-default);
       margin-left: 9px;
+      transform: rotate(0);
+      transition: transform 0.3s;
+
+      .is-open & {
+        transform: rotate(180deg);
+      }
     }
   }
 
@@ -93,7 +109,6 @@
     }
 
     .gallery__item-img {
-      width: 60px;
       height: 60px;
       border-radius: 3px;
     }
