--- a/source/sass/blocks/gallery-with-thumbs.scss
+++ b/source/sass/blocks/gallery-with-thumbs.scss
@@ -1,7 +1,13 @@
 .gallery-with-thumbs {
   padding: 24px;
   border-radius: 5px;
-  background-color: $color-bg;
+  background-color: var(--color-bg-secondary, $color-bg);
+
+  .gallery__item-link,
+  .gallery__item {
+    width: 100%;
+    height: auto;
+  }
 
   @include tablet {
     margin-left: 24px;
@@ -61,7 +67,7 @@
     font-size: rem(18px);
     margin: 0;
     line-height: 1.3;
-    color: $grey-lighter;
+    color: var(--color-text, $grey-lighter);
     padding-bottom: 24px;
     padding-top: 32px;
   }
@@ -126,7 +132,7 @@
 
       .gallery-with-thumbs__text {
         margin-right: -20px;
-        background-color: $color-bg;
+        background-color: var(--color-bg-secondary, $color-bg);
       }
 
       .gallery:first-of-type {
