--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -105,7 +105,7 @@ body {
   padding: 0;
 
   font-style: normal;
-  font-family: "Rubik", "Arial", sans-serif;
+  font-family: "Lato", "Arial", sans-serif;
   font-weight: 400;
   font-size: rem(15px);
   line-height: rem(20px);
