--- a/source/components/header-v2.html
+++ b/source/components/header-v2.html
@@ -18,7 +18,7 @@
 
       <a class="page-header__site-name link link--black" href="#">Общественное голосование</a>
 
-      <button type="button" class="page-header__location">
+      <button type="button" class="page-header__location"  data-bs-toggle="modal" data-bs-target="#regionModal">
         <svg width="18" height="18">
           <use xlink:href="img/sprite.svg#icon-pin"></use>
         </svg>
