--- a/source/sass/blocks/form-radio-v2.scss
+++ b/source/sass/blocks/form-radio-v2.scss
@@ -10,6 +10,7 @@
   display: flex;
   align-items: flex-start;
   align-self: flex-start;
+  flex-wrap: wrap;
   cursor: pointer;
   transition: all $style-change-duration;
   font-weight: 400;
@@ -29,12 +30,24 @@
     margin-top: 3px;
   }
 
+  span {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    padding-left: 32px;
+    margin-top: 3px;
+    font-size: rem(13px);
+    line-height: rem(15px);
+    color: var(--color-text, $light-text);
+    opacity: 0.75;
+  }
+
   @include mobile {
     font-size: rem(14px);
   }
 }
 
-.form-radio input[type="radio"]:not(:checked) ~ label {
+.form-radio input[type="radio"]:not(:checked):not(:disabled) ~ label {
   &:hover {
     &::before {
       border: 1px solid var(--color-interactive-default, $blue-sail);
