--- a/source/sass/blocks/page-nav.scss
+++ b/source/sass/blocks/page-nav.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-shrink: 0;
-  width: rem(395px);
+  //width: rem(395px);
   padding: 24px 16px;
   margin-left: 20px;
 
