Modal ready for test

--- a/source/sass/mixins-v2.scss
+++ b/source/sass/mixins-v2.scss
@@ -48,8 +48,8 @@
 }
 
 @mixin main-text {
-  font-size: rem(15px);
-  line-height: rem(20px);
+  font-size: rem(16px);
+  line-height: 135%;
   font-weight: 400;
 }
 
