--- a/source/sass/style-v2.scss
+++ b/source/sass/style-v2.scss
@@ -129,6 +129,8 @@
 @import 'blocks/direct-line-section';
 @import 'blocks/info-item';
 @import 'blocks/custom-select';
+@import 'blocks/form-info';
+@import 'blocks/bootstrap-custom';
 
 // main page
 @import "blocks/news-notice";
