--- a/source/components/modal-region.html
+++ b/source/components/modal-region.html
@@ -1,34 +1,27 @@
-<div class="modal fade" id="regionModal" tabindex="-1" aria-labelledby="regionModalLabel" aria-hidden="true">
+<div class="modal modal--region fade" id="regionModal" tabindex="-1" aria-labelledby="regionModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
-      <div class="modal-header row flex-column">
+      <div class="modal-header">
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        <h5 class="modal-title" id="exampleModalLabel">Ваш регион</h5>
-        <p>Выберите регион из списка или один из ваших адресов, чтобы посмотреть и принять участие в доступных Вам активностях </p>
+        <h3 class="modal-title">Ваш регион</h3>
+        <p class="modal__subtitle">Выберите регион из списка или один из ваших адресов, чтобы посмотреть и принять участие в доступных Вам активностях </p>
       </div>
       <div class="modal-body">
         <form action="" id="region-form">
           <div class="form-radio">
-            <input id="location-residence1" type="radio" name="location1" value="residence" checked data-checkbox-show-more="formSelect3">
+            <input id="location-residence1" type="radio" name="location1" value="residence" data-checkbox-show-more="formSelect3">
             <label for="location-residence1">
               Выбранный регион
               <span>Не указано</span>
             </label>
           </div>
 
-          <div id="formSelect3">
+          <div id="formSelect3" class="collapse">
             <select class="_select-search" id="formSelect2" data-trigger="data-trigger">
               <option placeholder value="">Выберите из списка</option>
-              <option value="1">Первый вариант</option>
-              <option value="2">Второй вариант</option>
-              <option value="3">Третий вариант</option>
-              <option value="4">Четвертый вариант</option>
-              <option value="5">Пятый вариант</option>
-              <option value="5">Пятый вариант</option>
-              <option value="5">Пятый вариант</option>
-              <option value="5">Пятый вариант</option>
-              <option value="5">Пятый вариант</option>
-              <option value="6">Шестой вариант</option>
+              <option value="1">Магаданская область</option>
+              <option value="2">Московская область</option>
+              <option value="3">Мурманская область</option>
             </select>
           </div>
 
@@ -50,6 +43,10 @@
             </label>
           </div>
         </form>
+
+        <p class="form-info mt-4 mb-4">
+          Подробную инструкцию о добавлении адресов смотрите на странице <a href="#" class="link link--blue">О проекте</a>
+        </p>
       </div>
       <div class="modal-footer">
         <button type="submit" form="region-form" class="button button--blue" data-bs-dismiss="modal">Применить</button>
