--- a/source/components/new-design-banner-2.html
+++ b/source/components/new-design-banner-2.html
@@ -1,14 +1,12 @@
-<div class="internet-banner">
-  <div class="container">
-    <div class="internet-banner__wrapper">
-      <div class="internet-banner__container">
-        <p class="internet-banner__title">Реализованные проекты</p>
-        <p class="internet-banner__text">В&nbsp;данном разделе можно ознакомиться с&nbsp;реализованными в&nbsp;регионе проектами</p>
-        <a class="internet-banner__button button button--blue" href="#">перейти к проектам</a>
-      </div>
-      <div class="internet-banner__image-wrapper">
-        <img width="518" height="276" src="img/new-banner-2.svg" alt="Картинка">
-      </div>
+<div class="internet-banner-v2 mt-5 mb-5">
+  <div class="internet-banner-v2__wrapper">
+    <div class="internet-banner-v2__container">
+      <p class="internet-banner-v2__title">Реализованные проекты</p>
+      <p class="internet-banner-v2__text">В&nbsp;данном разделе можно ознакомиться с&nbsp;реализованными в&nbsp;регионе проектами</p>
+      <a class="internet-banner-v2__button button button--blue" href="#">перейти к проектам</a>
+    </div>
+    <div class="internet-banner-v2__image-wrapper">
+      <img width="518" height="276" src="img/new-banner-2.svg" alt="Картинка">
     </div>
   </div>
 </div>
