--- a/source/sass/blocks/link-arrow-v2.scss
+++ b/source/sass/blocks/link-arrow-v2.scss
@@ -6,7 +6,7 @@
   line-height: 135%;
   text-transform: uppercase;
   text-decoration: none;
-  color: var(--color-interactive-default, $blue-default);
+  color: var(--color-text, $blue-default);
 
   transition: all $style-change-duration;
 
