--- a/source/components/header-v2.html
+++ b/source/components/header-v2.html
@@ -1,5 +1,5 @@
 <header class="page-header js-page-header">
-  <div class="page-header__bar js-page-header__bar">
+  <div class="page-header__bar js-page-header__bar js-main-menu">
     <div class="page-header__container container">
       <a class="page-header__roi-logo logo-link" href="#">
         <span class="visually-hidden">Перейти на сайт российской общественной инициативы</span>
@@ -46,38 +46,38 @@
     </div>
   </div>
 
-  <div class="page-header__main-menu main-menu js-main-menu">
-    <div class="container">
-      <div class="page-header__location-switcher location-switcher js-location-switcher">
-        <p class="visually-hidden">Выберите регион голосования:</p>
+<!--  <div class="page-header__main-menu main-menu">-->
+<!--    <div class="container">-->
+<!--      <div class="page-header__location-switcher location-switcher js-location-switcher">-->
+<!--        <p class="visually-hidden">Выберите регион голосования:</p>-->
 
-        <form action="#" method="post">
-          <div class="location-switcher__btn form-radio">
-            <input id="location-residence" type="radio" name="location" value="residence" checked>
-            <label for="location-residence">
-              Адрес проживания
-              <span class="page-header__location-address location-switcher__address">Городской округ рабочий поселок Новогуровский</span>
-            </label>
-          </div>
+<!--        <form action="#" method="post">-->
+<!--          <div class="location-switcher__btn form-radio">-->
+<!--            <input id="location-residence" type="radio" name="location" value="residence" checked>-->
+<!--            <label for="location-residence">-->
+<!--              Адрес проживания-->
+<!--              <span class="page-header__location-address location-switcher__address">Городской округ рабочий поселок Новогуровский</span>-->
+<!--            </label>-->
+<!--          </div>-->
 
-          <div class="location-switcher__btn form-radio">
-            <input id="location-registration" type="radio" name="location" value="registration">
-            <label for="location-registration">
-              Адрес регистрации
-              <span class="page-header__location-address location-switcher__address">Краснобродский городской округ</span>
-            </label>
-          </div>
+<!--          <div class="location-switcher__btn form-radio">-->
+<!--            <input id="location-registration" type="radio" name="location" value="registration">-->
+<!--            <label for="location-registration">-->
+<!--              Адрес регистрации-->
+<!--              <span class="page-header__location-address location-switcher__address">Краснобродский городской округ</span>-->
+<!--            </label>-->
+<!--          </div>-->
 
-          <button class="location-switcher__show-btn button button--blue" type="submit">Показать</button>
-        </form>
-      </div>
+<!--          <button class="location-switcher__show-btn button button&#45;&#45;blue" type="submit">Показать</button>-->
+<!--        </form>-->
+<!--      </div>-->
 
-      <a class="page-header__version-btn page-header__version-btn--menu link link--black js-open-popup" href="#">
-        <svg width="18" height="18">
-          <use xlink:href="img/sprite.svg#icon-glasses"></use>
-        </svg>
-        Версия для слабовидящих
-      </a>
+<!--      <a class="page-header__version-btn page-header__version-btn&#45;&#45;menu link link&#45;&#45;black js-open-popup" href="#">-->
+<!--        <svg width="18" height="18">-->
+<!--          <use xlink:href="img/sprite.svg#icon-glasses"></use>-->
+<!--        </svg>-->
+<!--        Версия для слабовидящих-->
+<!--      </a>-->
 
 <!--      <nav class="page-header__user-menu user-menu js-user-menu">-->
 <!--        <div class="user-menu__overlay js-user-menu__overlay"></div>-->
@@ -110,6 +110,6 @@
 <!--          </li>-->
 <!--        </ul>-->
 <!--      </nav>-->
-    </div>
-  </div>
+<!--    </div>-->
+<!--  </div>-->
 </header>
