--- a/source/components/new-design-banner.html
+++ b/source/components/new-design-banner.html
@@ -1,14 +1,12 @@
-<div class="internet-banner">
-  <div class="container">
-    <div class="internet-banner__wrapper">
-      <div class="internet-banner__container">
-        <p class="internet-banner__title">Опросы и&nbsp;голосования</p>
-        <p class="internet-banner__text">Принимайте активное участие в&nbsp;развитии своего региона: голосуйте, делитесь мнением, учавствуйте в&nbsp;обсуждениях и&nbsp;предлагайте идеи</p>
-        <a class="internet-banner__button button button--blue" href="#">Подробнее о проекте</a>
-      </div>
-      <div class="internet-banner__image-wrapper">
-        <img width="410" height="300" src="img/new-banner.svg" alt="Картинка">
-      </div>
+<div class="internet-banner-v2">
+  <div class="internet-banner-v2__wrapper">
+    <div class="internet-banner-v2__container">
+      <p class="internet-banner-v2__title">Опросы и&nbsp;голосования</p>
+      <p class="internet-banner-v2__text">Принимайте активное участие в&nbsp;развитии своего региона: голосуйте, делитесь мнением, учавствуйте в&nbsp;обсуждениях и&nbsp;предлагайте идеи</p>
+      <a class="internet-banner-v2__button button button--blue" href="#">Подробнее о проекте</a>
+    </div>
+    <div class="internet-banner-v2__image-wrapper">
+      <img width="410" height="300" src="img/new-banner.svg" alt="Картинка">
     </div>
   </div>
 </div>
