--- a/source/sass/blocks/page-footer-v2.scss
+++ b/source/sass/blocks/page-footer-v2.scss
@@ -1,3 +1,31 @@
 .page-footer {
   background-image: none;
 }
+
+.page-footer__item {
+  & a {
+    align-self: flex-start;
+    text-decoration: none;
+    outline: none;
+    transition: color $style-change-duration;
+    color: var(--color-text, $blue-default);
+
+    &:focus {
+      color: var(--color-interactive-default, $blue-hover);
+    }
+
+    &:focus:not(.focus-visible) {
+      color: var(--color-text, $blue-default);
+    }
+
+    &:active:not(.focus-visible) {
+      color: var(--color-interactive-default, $blue-hover);
+    }
+
+    @media (min-width: $desktop-width) {
+      &:hover:not(.focus-visible) {
+        color: var(--color-interactive-default, $blue-hover);
+      }
+    }
+  }
+}
