--- a/source/sass/blocks/project.scss
+++ b/source/sass/blocks/project.scss
@@ -92,6 +92,7 @@
   justify-content: center;
   align-items: center;
   width: 32px;
+  color: $blue-default;
 
   @media (max-width: $tablet-width - 1) {
     position: absolute;
