--- a/source/sass/blocks/section-v2.scss
+++ b/source/sass/blocks/section-v2.scss
@@ -10,7 +10,7 @@
 
     @include mobile {
       min-width: 28px;
-      margin-top: 14px;
+      margin-top: 9px;
     }
   }
 }
@@ -22,7 +22,7 @@
   @media (max-width: $tablet-width - 1) {
     padding-left: 14px;
 
-    @include font-h2();
+    font-size: rem(30px);
     font-weight: 500;
   }
 }
