--- a/source/sass/blocks/single-news.scss
+++ b/source/sass/blocks/single-news.scss
@@ -16,6 +16,7 @@
   @include mobile {
     margin-right: 0;
     padding-bottom: 8px;
+    max-width: unset;
   }
 
   .date {
@@ -31,7 +32,7 @@
     font-weight: 400;
     font-size: rem(16px);
     line-height: 150%;
-    color: $dark-text;
+    color: var(--color-text, $dark-text);
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
@@ -48,7 +49,7 @@
 
   &:hover {
     .single-news__text {
-      color: $blue-default;
+      color: var(--color-interactive-default, $blue-default);
     }
   }
 }
