--- a/source/sass/blocks/tag.scss
+++ b/source/sass/blocks/tag.scss
@@ -13,4 +13,12 @@
     line-height: 130%;
     margin-bottom: 12px;
   }
+
+  .mod-theme-inverse &,
+  .mod-theme-blue &,
+  .mod-theme-comfort &,
+  .mod-theme-brown & {
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
