--- a/source/sass/global-v2.scss
+++ b/source/sass/global-v2.scss
@@ -5,21 +5,25 @@ html {
   font-size: ($base-font-size / 16px) * 100%;
   font-family: "Rubik", "Arial", sans-serif;
 
-  &.mod-font-family-arial {
+  &.mod-font-family-arial,
+  &.mod-font-family-arial body {
     font-family: "Arial", sans-serif;
   }
 
-  &.mod-font-family-times {
+  &.mod-font-family-times,
+  &.mod-font-family-times body {
     font-family: "Times New Roman", serif;
   }
 
 
-  &.mod-font-size-larger {
-    font-size: 18px;
+  &.mod-font-size-larger,
+  &.mod-font-size-larger body {
+    font-size: rem(18px);
   }
 
-  &.mod-font-size-largest {
-    font-size: 20px;
+  &.mod-font-size-largest,
+  &.mod-font-size-largest body {
+    font-size: rem(20px);
   }
 
   &.mod-theme-inverse {
@@ -28,7 +32,7 @@ html {
     --color-bg-secondary: #{$dark-main};
     --color-bg-secondary-transparent: #{rgba($dark-main, 0)};
     --color-icon: #{$white};
-    --color-interactive-accent: #{$blue-accent};
+    --color-interactive-accent: #{$blue-hover};
     --color-interactive-default: #{$blue-default};
     --color-stroke: #{$light-grey};
     --color-tag: #{$grey};
@@ -43,7 +47,7 @@ html {
     --color-bg-secondary: #{$light-blue};
     --color-bg-secondary-transparent: #{rgba($light-blue, 0)};
     --color-icon: #{$dark-text};
-    --color-interactive-accent: #{$blue-accent};
+    --color-interactive-accent: #{$blue-hover};
     --color-interactive-default: #{$blue-default};
     --color-stroke: #{$blue-default};
     --color-tag: #{$light-grey};
@@ -58,7 +62,7 @@ html {
     --color-bg-secondary: #{#f7e4d8};
     --color-bg-secondary-transparent: #{rgba(#f7e4d8, 0)};
     --color-icon: #{$comfort};
-    --color-interactive-accent: #{$blue-accent};
+    --color-interactive-accent: #{$blue-hover};
     --color-interactive-default: #{$blue-default};
     --color-stroke: #{$comfort};
     --color-tag: #{$light-grey};
